# www

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  LICENSE-MIT  README.md  flake.nix  rustfmt.toml
saffi/: Cargo.toml
saffi-dev/: Cargo.toml
saffi-wtf/: Cargo.toml  build.rs
saffi-wtf/content/: 2024-02-13-it-cant-be-this-hard.md  _index.md
saffi-wtf/content/blog/: 2024-02-13-it-cant-be-this-hard.md  2024-03-02-stop-incoming-connections-popups.md  2024-04-20-canonicalize-is-more-useful-than-i-thought.md  _index.md
saffi-wtf/scss/: _reset.scss  style.scss
saffi-wtf/src/: errors.rs  handlers.rs  main.rs  render.rs  state.rs  templates.rs
saffi-wtf/src/state/: names.rs  render.rs
saffi-wtf/src/templates/: components.rs  pages.rs  partials.rs  wrappers.rs
saffi/src/: lib.rs  result_option_exts.rs  swap_result.rs
www-saffi/: Cargo.toml
www-saffi-dev/: Cargo.toml
www-saffi-dev/src/: main.rs
www-saffi-wtf/: Cargo.toml
www-saffi-wtf/src/: main.rs
