[workspace]
members = [
    "saffi",
    "saffi-dev",
    "saffi-wtf",
]

[workspace.dependencies]
www-saffi = { path = "saffi" }
www-saffi-dev = { path = "saffi-dev" }
www-saffi-wtf = { path = "saffi-wtf" }

axum = "0.6.20"
axum-tracing-opentelemetry = "0.13.1"
cfg-if = "1.0.0"
init-tracing-opentelemetry = "0.13.1"
maud = "0.25.0"
tap = "1.0.1"
thiserror = "1.0.47"
tokio = "1.32.0"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
