[workspace]
resolver = "2"
members = [
    "saffi",
    "saffi-dev",
    "saffi-wtf",
]

[workspace.dependencies]
www-saffi = { path = "saffi" }
www-saffi-dev = { path = "saffi-dev" }
www-saffi-wtf = { path = "saffi-wtf" }

axum = "0.7.4"
axum-tracing-opentelemetry = "0.16.0"
camino = "1.1.6"
cfg-if = "1.0.0"
clap = "4.5.0"
comrak = "0.21.0"
dotenv = "0.15.0"
grass = "0.13.2"
grass_compiler = "0.13.2"
init-tracing-opentelemetry = "0.16.0"
maud = "0.26.0"
syntect = "5.2.0"
tap = "1.0.1"
thiserror = "1.0.56"
tokio = "1.36.0"
tower = "0.4.13"
tower-http = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
