[workspace]
resolver = "2"
members = [
    "saffi",
    "saffi-dev",
    "saffi-wtf",
]

[workspace.dependencies]
www-saffi = { path = "saffi" }
www-saffi-dev = { path = "saffi-dev" }
www-saffi-wtf = { path = "saffi-wtf" }

axum = "0.7.4"
axum-tracing-opentelemetry = "0.16.0"
camino = "1.1.6"
cfg-if = "1.0.0"
chrono = "0.4.34"
clap = "4.5.0"
comrak = "0.21.0"
dotenv = "0.15.0"
either = "1.11.0"
grass = "0.13.2"
grass_compiler = "0.13.2"
ignore = "0.4.22"
init-tracing-opentelemetry = "0.16.0"
lazy_static = "1.4.0"
maud = "0.26.0"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
serde = "1.0.196"
syntect = "5.2.0"
tap = "1.0.1"
thiserror = "1.0.56"
tokio = "1.36.0"
toml = "0.8.10"
tower = "0.4.13"
tower-http = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.7.0"
