[package]
name = "www-saffi-wtf"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
axum-tracing-opentelemetry.workspace = true
axum.workspace = true
cfg-if.workspace = true
comrak.workspace = true
syntect.workspace = true
thiserror.workspace = true
tower.workspace = true
tracing.workspace = true
www-saffi.workspace = true

[dependencies.maud]
workspace = true
features = ["axum"]

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.tower-http]
workspace = true
features = ["fs"]

[build-dependencies]
grass.workspace = true
grass_compiler.workspace = true
thiserror.workspace = true
