[package]
name = "www-saffi-wtf"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
axum-tracing-opentelemetry.workspace = true
axum.workspace = true
camino.workspace = true
cfg-if.workspace = true
comrak.workspace = true
dotenv.workspace = true
syntect.workspace = true
tap.workspace = true
thiserror.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
www-saffi.workspace = true
futures.workspace = true

[dependencies.clap]
workspace = true
features = ["env"]

[dependencies.maud]
workspace = true
features = ["axum"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.tower-http]
workspace = true
features = ["fs"]

[dependencies.uuid]
workspace = true
features = ["v4"]

[build-dependencies]
grass.workspace = true
grass_compiler.workspace = true
thiserror.workspace = true
