[package]
name = "www-saffi"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
cfg-if.workspace = true
init-tracing-opentelemetry.workspace = true
tracing.workspace = true

[dependencies.tokio]
workspace = true
features = ["full"]

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]
